Got the observer to pick up on new items being added to the media scanner.  Woot.

--- a/XamarinSpikes/DroidSpike/MediaBroadcastReceiver/MediaBroadcastReceiver.csproj
+++ b/XamarinSpikes/DroidSpike/MediaBroadcastReceiver/MediaBroadcastReceiver.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Activity1.cs" />
     <Compile Include="HeadphoneBroadcastReceiver.cs" />
+    <Compile Include="PhotosObserver.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
