--- a/XamarinSpikes/DroidSpike/MediaBroadcastReceiver/Properties/AndroidManifest.xml
+++ b/XamarinSpikes/DroidSpike/MediaBroadcastReceiver/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="15" />
+	<uses-sdk />
 	<application></application>
 	<uses-permission android:name="android.permission.ACCESS_CHECKIN_PROPERTIES" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
