The list view is set up, time to add the header.

--- a/XamarinSpikes/MvxListWithHeader/MvxListWithHeader.Droid/MvxListWithHeader.Droid.csproj
+++ b/XamarinSpikes/MvxListWithHeader/MvxListWithHeader.Droid/MvxListWithHeader.Droid.csproj
@@ -98,6 +98,9 @@
     <None Include="Assets\AboutAssets.txt" />
     <AndroidResource Include="Resources\Layout\SplashScreen.axml" />
     <AndroidResource Include="Resources\Layout\FirstView.axml" />
+    <AndroidResource Include="Resources\Layout\simple_list_item.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\Values\Strings.xml" />
@@ -110,6 +113,7 @@
     <AndroidResource Include="Resources\Values\SplashStyle.xml" />
     <AndroidResource Include="Resources\Values\MvxBindingAttributes.xml" />
     <AndroidResource Include="Resources\Drawable\splash.png" />
+    <AndroidResource Include="Resources\Drawable\back.xml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MvxListWithHeader.Core\MvxListWithHeader.Core.csproj">
