--- a/XamarinSpikes/DroidSpike/SwipeyView/SwipeyView.csproj
+++ b/XamarinSpikes/DroidSpike/SwipeyView/SwipeyView.csproj
@@ -61,8 +61,10 @@
   <ItemGroup>
     <Compile Include="DemoCollectionPagerAdapter.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="OnPageChangeListener.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TabListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
