I do not remember what this was.  whoops.

--- a/XamarinSpikes/DroidSpike/FilteredListView/FilteredListView.csproj
+++ b/XamarinSpikes/DroidSpike/FilteredListView/FilteredListView.csproj
@@ -51,9 +51,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMyAdapter.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="MyAdapter.cs" />
     <Compile Include="MyFilter.cs" />
+    <Compile Include="MyGroupedAdapter.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
