--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.Android/ShoppingCart.Android.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.Android/ShoppingCart.Android.csproj
@@ -36,6 +36,9 @@
     <WarningLevel>4</WarningLevel>
     <AndroidUseSharedRuntime>True</AndroidUseSharedRuntime>
     <AndroidLinkMode>None</AndroidLinkMode>
+    <AndroidLinkSkip />
+    <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
+    <BundleAssemblies>False</BundleAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
