--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/packages.config
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
+  <package id="Humanizer" version="1.28.0" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
   <package id="Portable.MvvmLightLibs" version="4.4.32.1" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
   <package id="Xamarin.Forms" version="1.2.2.6243" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
