--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.WinPhone/packages.config
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.WinPhone/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
   <package id="Xamarin.Forms" version="1.2.2.6243" targetFramework="wp80" />
+  <package id="ZXing.Net.Mobile" version="1.4.6" targetFramework="wp80" />
 </packages>
