--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/ShoppingCart.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/ShoppingCart.csproj
@@ -37,6 +37,7 @@
     <Compile Include="App.cs" />
     <Compile Include="Async\AsyncImageSource.cs" />
     <Compile Include="Async\NotifyTaskCompletion.cs" />
+    <Compile Include="ContainerCreator.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Mvvm\SimpleCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -77,6 +78,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Autofac">
+      <HintPath>..\..\packages\Autofac.3.5.2\lib\portable-net4+sl5+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="GalaSoft.MvvmLight">
       <HintPath>..\..\packages\Portable.MvvmLightLibs.4.4.32.1\lib\portable-net45+wp8+win8+wpa81\GalaSoft.MvvmLight.dll</HintPath>
     </Reference>
