--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/packages.config
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
   <package id="Humanizer" version="1.28.0" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
