--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/ShoppingCart.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/ShoppingCart.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Models\Item.cs" />
     <Compile Include="Mvvm\SimpleCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ILogger.cs" />
     <Compile Include="Services\ILoginService.cs" />
     <Compile Include="Services\INavigationService.cs" />
     <Compile Include="Services\IProductLoader.cs" />
