--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.iOS/ShoppingCart.iOS.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.iOS/ShoppingCart.iOS.csproj
@@ -89,6 +89,9 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Autofac">
+      <HintPath>..\..\packages\Autofac.3.5.2\lib\portable-net4+sl5+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
