--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.iOS/packages.config
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.iOS/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="MonoTouch10" />
   <package id="Xamarin.Forms" version="1.2.2.6243" targetFramework="MonoTouch10" />
 </packages>
