Mvvmcross template up and running

--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,4 @@ UpgradeLog*.htm
 # Microsoft Fakes
 FakesAssemblies/
 /XamarinSpikes/ShoppingCart/packages
+/XamarinSpikes/MvvmCrossSpikes/packages
