--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.WinPhone/ShoppingCart.WinPhone.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.WinPhone/ShoppingCart.WinPhone.csproj
@@ -104,6 +104,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
+    <Compile Include="SamplePage.xaml.cs">
+      <DependentUpon>SamplePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Services\WinPhoneLogger.cs" />
     <Compile Include="Services\WinPhoneScanner.cs" />
     <Compile Include="WinPhoneSetup.cs" />
@@ -114,6 +117,10 @@
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
     <Page Include="MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SamplePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
