Binding to platform independent theme code

--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/ShoppingCart.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/ShoppingCart.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Services\IProductLoader.cs" />
     <Compile Include="Services\IProductService.cs" />
     <Compile Include="Services\IScannerService.cs" />
+    <Compile Include="Services\IThemer.cs" />
     <Compile Include="Services\ProductLoader.cs" />
     <Compile Include="Services\ProductService.cs" />
     <Compile Include="Services\LoginService.cs" />
