--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.Android/ShoppingCart.Android.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.Android/ShoppingCart.Android.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DroidLogger.cs" />
     <Compile Include="Services\DroidScanner.cs" />
+    <Compile Include="Services\DroidThemer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
