--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.Android/packages.config
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.Android/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="MonoAndroid403" />
   <package id="Xamarin.Android.Support.v4" version="20.0.0.3" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.Behaviors" version="1.0.1" targetFramework="MonoAndroid403" />
   <package id="Xamarin.Forms" version="1.2.2.6243" targetFramework="MonoAndroid44" />
 </packages>
