--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.iOS/ShoppingCart.iOS.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.iOS/ShoppingCart.iOS.csproj
@@ -96,6 +96,9 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="monotouch" />
+    <Reference Include="Xamarin.Behaviors">
+      <HintPath>..\..\packages\Xamarin.Behaviors.1.0.1\lib\Xamarin.Behaviors.dll</HintPath>
+    </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=1.2.2.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Xamarin.Forms.1.2.2.6243\lib\MonoTouch10\Xamarin.Forms.Core.dll</HintPath>
