--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/packages.config
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/packages.config
@@ -5,5 +5,6 @@
   <package id="Humanizer" version="1.28.0" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
   <package id="Portable.MvvmLightLibs" version="4.4.32.1" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
+  <package id="Xamarin.Behaviors" version="1.0.1" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
   <package id="Xamarin.Forms" version="1.2.2.6243" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
 </packages>
