--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.WinPhone/packages.config
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.WinPhone/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="wp80" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
+  <package id="Xamarin.Behaviors" version="1.0.1" targetFramework="wp80" />
   <package id="Xamarin.Forms" version="1.2.2.6243" targetFramework="wp80" />
   <package id="ZXing.Net.Mobile" version="1.4.6" targetFramework="wp80" />
 </packages>
