Created a helper binding base class as well as a command binding for buttons.

--- a/XamarinSpikes/MvvmCrossSpikes/MvvmCrossSpikes.Droid/MvvmCrossSpikes.Droid.csproj
+++ b/XamarinSpikes/MvvmCrossSpikes/MvvmCrossSpikes.Droid/MvvmCrossSpikes.Droid.csproj
@@ -91,6 +91,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bindings\ButtonCommandBinding.cs" />
     <Compile Include="DebugTrace.cs" />
     <Compile Include="LinkerPleaseInclude.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
