Splitting classes into seperate files.

--- a/XamarinSpikes/MvvmCrossSpikes/MvvmCrossSpikes.Droid/MvvmCrossSpikes.Droid.csproj
+++ b/XamarinSpikes/MvvmCrossSpikes/MvvmCrossSpikes.Droid/MvvmCrossSpikes.Droid.csproj
@@ -92,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bindings\ButtonCommandBinding.cs" />
+    <Compile Include="Bindings\MvxTargetBinding.cs" />
     <Compile Include="DebugTrace.cs" />
     <Compile Include="LinkerPleaseInclude.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
