--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/ShoppingCart.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/ShoppingCart.csproj
@@ -43,6 +43,8 @@
     <Compile Include="Models\Item.cs" />
     <Compile Include="Mvvm\SimpleCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AppNavigation.cs" />
+    <Compile Include="Services\IAppNavigation.cs" />
     <Compile Include="Services\ILogger.cs" />
     <Compile Include="Services\ILoginService.cs" />
     <Compile Include="Services\INavigationService.cs" />
@@ -50,6 +52,7 @@
     <Compile Include="Services\IProductService.cs" />
     <Compile Include="Services\IScannerService.cs" />
     <Compile Include="Services\IThemer.cs" />
+    <Compile Include="Services\Messages.cs" />
     <Compile Include="Services\ProductLoader.cs" />
     <Compile Include="Services\ProductService.cs" />
     <Compile Include="Services\LoginService.cs" />
