Still trying to clean up navigaation.  It's a work in progress.

--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/ShoppingCart.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/ShoppingCart.csproj
@@ -48,11 +48,13 @@
     <Compile Include="Services\ILogger.cs" />
     <Compile Include="Services\ILoginService.cs" />
     <Compile Include="Services\INavigationService.cs" />
+    <Compile Include="Services\IPageFactory.cs" />
     <Compile Include="Services\IProductLoader.cs" />
     <Compile Include="Services\IProductService.cs" />
     <Compile Include="Services\IScannerService.cs" />
     <Compile Include="Services\IThemer.cs" />
     <Compile Include="Services\Messages.cs" />
+    <Compile Include="Services\PageFactory.cs" />
     <Compile Include="Services\ProductLoader.cs" />
     <Compile Include="Services\ProductService.cs" />
     <Compile Include="Services\LoginService.cs" />
