--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.Android/ShoppingCart.Android.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.Android/ShoppingCart.Android.csproj
@@ -98,6 +98,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DroidCache.cs" />
     <Compile Include="Services\DroidLogger.cs" />
     <Compile Include="Services\DroidScanner.cs" />
     <Compile Include="Services\DroidThemer.cs" />
