--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.Android/packages.config
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.Android/packages.config
@@ -1,6 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="akavache" version="4.0.3.2" targetFramework="MonoAndroid403" />
+  <package id="akavache.core" version="4.0.3.2" targetFramework="MonoAndroid403" />
+  <package id="akavache.sqlite3" version="4.0.3.2" targetFramework="MonoAndroid403" />
   <package id="Autofac" version="3.5.2" targetFramework="MonoAndroid403" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="MonoAndroid403" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="MonoAndroid403" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="MonoAndroid403" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="MonoAndroid403" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="MonoAndroid403" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="MonoAndroid403" />
+  <package id="Splat" version="1.3.3" targetFramework="MonoAndroid403" />
+  <package id="SQLitePCL.raw_basic" version="0.5.0" targetFramework="MonoAndroid403" />
   <package id="Xamarin.Android.Support.v4" version="20.0.0.3" targetFramework="MonoAndroid44" />
   <package id="Xamarin.Behaviors" version="1.0.1" targetFramework="MonoAndroid403" />
   <package id="Xamarin.Forms" version="1.2.2.6243" targetFramework="MonoAndroid44" />
