--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/ShoppingCart.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/ShoppingCart.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AppNavigation.cs" />
     <Compile Include="Services\IAppNavigation.cs" />
+    <Compile Include="Services\ICache.cs" />
     <Compile Include="Services\ILogger.cs" />
     <Compile Include="Services\ILoginService.cs" />
     <Compile Include="Services\INavigationService.cs" />
