--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/ShoppingCart.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/ShoppingCart.csproj
@@ -39,6 +39,8 @@
     <Compile Include="Async\NotifyTaskCompletion.cs" />
     <Compile Include="AppSetup.cs" />
     <Compile Include="Behaviors\AnimateSizeBehavior.cs" />
+    <Compile Include="Commands\LogOutCommand.cs" />
+    <Compile Include="EventToCommand.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\User.cs" />
