--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.WinPhone/packages.config
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.WinPhone/packages.config
@@ -1,6 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="akavache" version="4.0.3.2" targetFramework="wp80" />
+  <package id="akavache.core" version="4.0.3.2" targetFramework="wp80" />
+  <package id="akavache.sqlite3" version="4.0.3.2" targetFramework="wp80" />
   <package id="Autofac" version="3.5.2" targetFramework="wp80" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="wp80" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="wp80" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="wp80" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="wp80" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="wp80" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="wp80" />
+  <package id="Rx-WinRT" version="2.2.5" targetFramework="wp80" />
+  <package id="Rx-XAML" version="2.2.5" targetFramework="wp80" />
+  <package id="Splat" version="1.5.0" targetFramework="wp80" />
+  <package id="SQLitePCL.raw_basic" version="0.5.0" targetFramework="wp80" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
   <package id="Xamarin.Behaviors" version="1.0.1" targetFramework="wp80" />
   <package id="Xamarin.Forms" version="1.2.2.6243" targetFramework="wp80" />
