Changing the names of the platform files to reflect their platforms.  I don't normally like this, but it makes it much less confusing for people browsing.

--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.Android/ShoppingCart.Android.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.Android/ShoppingCart.Android.csproj
@@ -130,7 +130,7 @@
     <Compile Include="Services\DroidLogger.cs" />
     <Compile Include="Services\DroidScanner.cs" />
     <Compile Include="Services\DroidThemer.cs" />
-    <Compile Include="Views\AboutPageRenderer.cs" />
+    <Compile Include="Renderers\DroidAboutPageRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
