--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.WinPhone/ShoppingCart.WinPhone.csproj
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.WinPhone/ShoppingCart.WinPhone.csproj
@@ -99,10 +99,10 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\AboutPage.xaml.cs">
-      <DependentUpon>AboutPage.xaml</DependentUpon>
+    <Compile Include="Views\WinPhoneAboutPage.xaml.cs">
+      <DependentUpon>WinPhoneAboutPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\AboutPageRenderer.cs" />
+    <Compile Include="Views\WinPhoneAboutPageRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -127,7 +127,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\AboutPage.xaml">
+    <Page Include="Views\WinPhoneAboutPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
