--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,4 @@ FakesAssemblies/
 /XamarinSpikes/ShoppingCart/packages
 /XamarinSpikes/MvvmCrossSpikes/packages
 /XamarinSpikes/DroidSpike/Components
+/AndroidFont/packages
