--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,7 @@ publish/
 
 # NuGet Packages Directory
 packages/*
+/**/packages
 ## TODO: If the tool you use requires repositories.config uncomment the next line
 #!packages/repositories.config
 
