Don't specify all dependencies individually

--- a/ConsoleApps/Repack/Repack/Repack.csproj
+++ b/ConsoleApps/Repack/Repack/Repack.csproj
@@ -69,7 +69,7 @@
 
      <ItemGroup>
       <InputAssemblies Include="$(OutputPath)\$(AssemblyName).exe" />
-      <InputAssemblies Include="$(OutputPath)\Humanizer.dll" />
+      <InputAssemblies Include="$(OutputPath)\*.dll" />
      </ItemGroup>
 
      <ILRepack 
