Implemented test code
Code came from https://msdn.microsoft.com/en-us/library/bb296010.aspx?cs-save-lang=1&cs-lang=csharp#code-snippet-12

--- a/Office/OutlookTaskPaneSpike/OutlookTaskPaneSpike/OutlookTaskPaneSpike.csproj
+++ b/Office/OutlookTaskPaneSpike/OutlookTaskPaneSpike/OutlookTaskPaneSpike.csproj
@@ -160,9 +160,19 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="InspectorWrapper.cs" />
+    <Compile Include="ManageTaskPaneRibbon.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ManageTaskPaneRibbon.Designer.cs">
+      <DependentUpon>ManageTaskPaneRibbon.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <EmbeddedResource Include="ManageTaskPaneRibbon.resx">
+      <DependentUpon>ManageTaskPaneRibbon.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -172,6 +182,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TaskPaneControl.resx">
+      <DependentUpon>TaskPaneControl.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="OutlookTaskPaneSpike_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -180,6 +193,12 @@
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="TaskPaneControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TaskPaneControl.Designer.cs">
+      <DependentUpon>TaskPaneControl.cs</DependentUpon>
     </Compile>
     <Compile Include="ThisAddIn.cs">
       <SubType>Code</SubType>
